# botfocused-messaging

./: .env.sample  .gitignore  README.md
.zed/: tasks.json
backend/: .env.sample  Cargo.toml  build.rs  wrangler.toml
backend/src/: lib.rs
frontend/: astro.config.mjs  package.json  svelte.config.js  tsconfig.json
frontend/public/: _headers
frontend/src/: api.svelte.ts  api.ts  config.ts
frontend/src/components/: About.astro  ConditionalAccountButtons.svelte  FlexHorizontal.astro  LinkButton.astro  LinkButton.svelte  ServerHealth.svelte  Welcome.astro
frontend/src/components/account/: CreateAccount.svelte  Login.svelte  MyAccount.svelte
frontend/src/components/bits/: Redirect.svelte
frontend/src/components/error/: NotFound.astro  ServerError.astro
frontend/src/layouts/: Centered.astro  Error.astro  Layout.astro
frontend/src/pages/: 404.astro  500.astro
frontend/src/pages/about/: index.astro
frontend/src/pages/account/login/: index.astro
frontend/src/pages/account/me/: index.astro
frontend/src/pages/account/new/: index.astro
