[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["MysteriousOyster <leifwilliambarton@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
tower-http = { version = "0.6.11", features = ["cors"] }
